[package]
name = "netracer"
version = "0.9.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10.2", features = ["openssl"] }
clap = { version = "4.5.37", features = ["derive"] }
native_db = "0.8.1"
native_model = "0.4.20"
once_cell = "1.21.3"
pcap = "0.8"
pnet = "0.35.0"
serde = "1.0.219"
ctrlc = "3.4"
actix-cors = "0.7.1"
include_dir = "0.7.4"
actix-files = "0.6.6"
chrono = "0.4.41"
rcgen = "0.13.2"
openssl = "0.10.72"
actix-web-httpauth = "0.8.2"
htpasswd-verify = "0.3.0"
rust_xlsxwriter = "0.86.1"

[[bin]]
name = "netracer"
path = "src/main.rs"
